--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ serde_yaml = "0.9.25"
 directories = "5.0.1"
 async-std = { version = "1.12.0" }
 image = { version = "0.24.6", default-features = false, features = ["gif"] }
-# rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
-# tray-item = "0.7.0"
-# notify-rust = "4.8.0"
+rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
+tray-item = "0.7.0"
+notify-rust = "4.8.0"
