--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ ui = { path = "ui" }
 serde = { version = "1.0.138", features = ["derive"] }
 serde_yaml = "0.9.25"
 directories = "5.0.1"
-async-std = { version = "1.12.0" }
-image = { version = "0.24.6", default-features = false, features = ["gif"] }
+async-std = { version = "1.12.0", features = ["unstable"] }
 rodio = { version = "0.17.1", default-features = false, features = ["mp3"] }
 tray-item = "0.7.0"
 notify-rust = "4.8.0"
