--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pomeowdoro"
+name = "dispute"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 
 [profile.dev]
 strip = "debuginfo"
+opt-level = "s"
 
 [dependencies]
 ui = { path = "ui" }
